Fix styling, layout and button functionality issues on mobile

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ button {
     color: #2D3142;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     transition-duration: 0.25s;
+    touch-action: manipulation;
 }
 
 /* Classes for static elements */
@@ -190,7 +191,7 @@ button {
 
 .stuck {
     position: fixed;
-    transform: translateY(-25%);
+    bottom: 2%;
     z-index: 1000;
 }
 
